add media links

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ My name is <i>Johann Canu</i>, French. I live in Japan for six years as Programm
           <h2><i class="fa fa-2x fa-users"></i> Social Media</h2>
           <p>Follows me on social media I am active !</p>
           <p>
-            <a class="btn btn-primary" href="#" role="button">Twitter &raquo;</a>
-            <a class="btn btn-primary" href="#" role="button">Linkedin &raquo;</a>
+            <a class="btn btn-primary" href="https://twitter.com/canujohann" role="button">Twitter &raquo;</a>
+            <a class="btn btn-primary" href="http://jp.linkedin.com/in/johanncanu" role="button">Linkedin &raquo;</a>
           </p>
         </div>
 
