edit blog+hp url

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ My name is <i>Johann Canu</i>, French. I live in Japan for six years as Programm
           <h2><i class="fa fa-2x fa-tachometer"></i> Personal HP</h2>
           <p>More details about my background ? </p>
           <p>
-            <a class="btn btn-primary" href="https://canujohann.com" role="button">Personal HP &raquo;</a>
-            <a class="btn btn-primary" href="https://blog.canujohann.com" role="button">Blog &raquo;</a>
+            <a class="btn btn-primary" href="http://canujohann.com" role="button">Personal HP &raquo;</a>
+            <a class="btn btn-primary" href="http://blog.canujohann.com" role="button">Blog &raquo;</a>
           </p>
         </div>
 
