edit html articles

--- a/_posts/2013-07-04-files-directories-size.html
+++ b/_posts/2013-07-04-files-directories-size.html
@@ -24,6 +24,10 @@ author:
 <p>[html]sudo du -ha /usr/ | sort -n -r | head -n 10[/html]</p>
 <blockquote><p>＊フォルダーはファイルとして扱われている　！</p></blockquote>
 <p>次のコマンドはカレントディレクトリー下のものをサイズ順位で出力してくれる。</p>
-<p>[html]cd /usr/local/xx<br />
- du -hsx * | sort -r | head -10[/html]</p>
+
+<pre>
+cd /usr/local/xx
+du -hsx * | sort -r | head -10
+ </pre>
+
 <p>以上です　！</p>
