--- a/_posts/2013-08-26-java-tips.html
+++ b/_posts/2013-08-26-java-tips.html
@@ -22,11 +22,14 @@ author:
   last_name: ''
 ---
 <p>javaの便利なコードの共有です：</p>
-<p>[java]</p>
-<p>if( resultCode ==1 || resultCode == 2 resultCode ==3 ||resultCode ==4)</p>
-<p>[/java]</p>
+<pre>
+  if( resultCode ==1 || resultCode == 2 resultCode ==3 ||resultCode ==4)
+</pre>
+
 <p>より、もっとスマートな書き方があります！　↓↓</p>
-<p>[java]<br />
-if(Arrays.asList(1,2,3,4).contains(resultCode))</p>
-<p>[/java]</p>
+
+<pre>
+if(Arrays.asList(1,2,3,4).contains(resultCode))
+</pre>
+
 <p>以上です！</p>
