--- a/_posts/2014-02-13-rails-detect-smartphones.html
+++ b/_posts/2014-02-13-rails-detect-smartphones.html
@@ -37,9 +37,9 @@ return false<br />
 end</p>
 </pre>
 <p>view側で</p>
-<p>[ruby]</p>
+<pre>
 <p>&lt;% if is_smartphone? %&gt;<br />
  ...<br />
 &lt;% end %&gt;</p>
-<p>[/ruby]</p>
+</pre>
 <p>以上！</p>
