--- a/_posts/2013-06-06-capistranoapacheunicorn.html
+++ b/_posts/2013-06-06-capistranoapacheunicorn.html
@@ -24,148 +24,190 @@ author:
   first_name: ''
   last_name: ''
 ---
-<p><img class="aligncenter" alt="unicorn" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQeL70bOmm9nzbeWixuPbQJ2i0Yul6JSJF4lDAH1y21wDPZB4tZ9g" width="160" height="164" /></p>
-<p><span style="font-style: inherit; line-height: 1.625;">Railsプロジェクトをデプロイする時に山ほどのエラーが発生することが先週初めて知りました・・</span><span style="font-style: inherit; line-height: 1.625;">・デプロイタスクを自動化しようと思い、capistranoを使ってみました。このツールを使いこなせると、あっという間にstaggingやproductionサーバーのデプロイが可能になりますので、設定手順を作ってみました。</span></p>
-<p>まずはローカル環境でcapistranoをインストールします<br />
-[html]gem install capistrano capistrano_colors capistrano-ext rvm-capistrano[/html]</p>
-<p>capistranoの他に幾つかのgemをインストールしました。</p>
+<img class="aligncenter" alt="unicorn" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQeL70bOmm9nzbeWixuPbQJ2i0Yul6JSJF4lDAH1y21wDPZB4tZ9g" width="160" height="164" /></p>
+<span style="font-style: inherit; line-height: 1.625;">Railsプロジェクトをデプロイする時に山ほどのエラーが発生することが先週初めて知りました・・</span><span style="font-style: inherit; line-height: 1.625;">・デプロイタスクを自動化しようと思い、capistranoを使ってみました。このツールを使いこなせると、あっという間にstaggingやproductionサーバーのデプロイが可能になりますので、設定手順を作ってみました。</span></p>
+まずはローカル環境でcapistranoをインストールします<br />
+
+<pre>
+gem install capistrano capistrano_colors capistrano-ext rvm-capistrano
+</pre>
+
+
+capistranoの他に幾つかのgemをインストールしました。</p>
 <ol>
 <li><strong>capistrano_colors</strong>　実行結果に色を付けれてくれる便利なgemです</li>
 <li><strong>capistrano-ext</strong>　環境に応じて、設定を変えられるツールです</li>
 <li><strong>rvm-capistrano</strong>　rvm経由でのインストール</li>
 </ol>
-<p>Gemfileを更新します</p>
-<p>[python]#デプロイする際にcapistranoをインストール<br />
-group :deployment do<br />
-  gem 'capistrano'<br />
-  gem 'capistrano_colors'<br />
-  gem 'capistrano-ext'<br />
-  gem 'rvm-capistrano'<br />
-end<br />
-...[/python]</p>
-<p><em><em>#プロダクションモードの場合(本番機)、unicornをインストール</em> group :production do gem 'unicorn' end ...</em><br />
+Gemfileを更新します</p>
+
+<pre>
+#デプロイする際にcapistranoをインストール
+group :deployment do
+  gem 'capistrano'
+  gem 'capistrano_colors'
+  gem 'capistrano-ext'
+  gem 'rvm-capistrano'
+end
+...
+</pre>
+
+
+<em><em>#プロダクションモードの場合(本番機)、unicornをインストール</em> group :production do gem 'unicorn' end ...</em><br />
 Gemfileの設定が完了になりました！次はcapistranoの設定を行います。【cap】コマンドでcapistranoの必要なファイルを生成します：</p>
-<p>[html]<br />
-$cd {project_path}<br />
-$capify .</p>
-<p>[/html]</p>
-<p>capify コマンドによって、デフォルトで次のファイルが生成されたはずです。</p>
+
+<pre>
+$cd {project_path}
+$capify .
+</pre>
+
+capify コマンドによって、デフォルトで次のファイルが生成されたはずです。</p>
 <ul>
 <li>Capfile</li>
 <li>config/deploy.rb</li>
 </ul>
-<p>【deploy.rb】を書き直します：</p>
-<p>[python]<br />
-#multi-stages用<br />
-require &quot;capistrano/ext/multistage&quot;</p>
-<p># 結果に色を作れくれるツール<br />
-require &quot;capistrano_colors&quot;</p>
-<p>require &quot;bundler/capistrano&quot;</p>
-<p># RVMでrubyを管理していれば　↓<br />
-require &quot;rvm/capistrano&quot;</p>
-<p># 値をセット<br />
-set :rvm_ruby_string, &quot;ruby-2.0.0-p0&quot;<br />
-set :application, &quot;myapp&quot;<br />
-set :copy_exclude, %w(.git .gitignore doc features log spec test tmp Capfile)<br />
-#set :shared_children, shared_children + %w(public/uploads)<br />
-set :use_sudo, false<br />
-set :user, &quot;app&quot;<br />
-set :stages, %w(staging production)</p>
-<p># unicornサーバーを管理するためにdeploy namespaceを用意<br />
-# start/stop/restartメッソード<br />
-namespace :deploy do<br />
-  task :start, roles: :app, except: { no_release: true } do<br />
-    run &quot;cd #{current_path} &amp;&amp; bundle exec unicorn_rails -c config/unicorn.rb -E #{rails_env} -D&quot;<br />
-  end</p>
-<p>  task :stop, roles: :app, except: { no_release: true } do<br />
-    run &quot;kill -KILL -s QUIT `cat #{shared_path}/pids/unicorn.pid`&quot;<br />
-  end</p>
-<p>  task :restart, roles: :app, except: { no_release: true } do<br />
-    stop<br />
-    start<br />
-  end<br />
-end</p>
-<p>#デプロイ前に確認画面を出す<br />
-def confirm<br />
-  puts &quot;ne[0;36m#{stage}e[0me[0;31m Do you really deploy? (yes/no) e[0mn&quot;<br />
-  proceed = STDIN.gets rescue nil<br />
-  exit unless proceed.chomp! == &quot;yes&quot;<br />
-end<br />
-[/python]</p>
-<p>本来はcapistranoの呼び方はこんな感じになります：</p>
-<p>[html]<br />
-cap namespace1:task1  namespace1:task2 tasks3<br />
-[/html]</p>
+【deploy.rb】を書き直します：</p>
+
+<pre>
+
+#multi-stages用
+require "capistrano/ext/multistage"
+
+# 結果に色を作れくれるツール
+require "capistrano_colors"
+require "bundler/capistrano"
+
+# RVMでrubyを管理していれば　↓
+require "rvm/capistrano"
+
+# 値をセット
+set :rvm_ruby_string, "ruby-2.0.0-p0"
+set :application, "myapp"
+set :copy_exclude, %w(.git .gitignore doc features log spec test tmp Capfile)
+#set :shared_children, shared_children + %w(public/uploads)
+set :use_sudo, false
+set :user, "app"
+set :stages, %w(staging production)
+# unicornサーバーを管理するためにdeploy namespaceを用意
+# start/stop/restartメッソード
+namespace :deploy do
+  task :start, roles: :app, except: { no_release: true } do
+    run "cd #{current_path} &amp;&amp; bundle exec unicorn_rails -c config/unicorn.rb -E #{rails_env} -D"
+  end
+  task :stop, roles: :app, except: { no_release: true } do
+    run "kill -KILL -s QUIT `cat #{shared_path}/pids/unicorn.pid`"
+  end
+  task :restart, roles: :app, except: { no_release: true } do
+    stop
+    start
+  end
+end
+
+#デプロイ前に確認画面を出す
+def confirm
+  puts "ne[0;36m#{stage}e[0me[0;31m Do you really deploy? (yes/no) e[0mn"
+  proceed = STDIN.gets rescue nil
+  exit unless proceed.chomp! == "yes"
+end
+
+</pre>
+
+
+本来はcapistranoの呼び方はこんな感じになります：</p>
+
+<pre>
+cap namespace1:task1  namespace1:task2 tasks3
+</pre>
+
 <p>今回はcapistranoのmultistageを使うことにしますので、コマンドが変わってきます。</p>
-<p>[html]<br />
-cap stage namespace1:task1  namespace1:task2 tasks3<br />
-[/html]</p>
+
+<pre>
+cap stage namespace1:task1  namespace1:task2 tasks3
+</pre>
+
 <p>設定ファイルで定義した通りに2つのstageを用意しておきます：</p>
+
 <ol>
 <li>stagging (テスト用)</li>
 <li>production（本番）</li>
 </ol>
-<p>capistranoは指定されたstagesの設定ファイルを自動的に読み取ってくれる。この設定ファイルの保存場所は　→　config/deploy/{stage名}.rb</p>
-<p>ということで、stagging.rbとproduction.rbを追加しましょう！</p>
-<p>[ruby]<br />
-#production.rb</p>
-<p>server &quot;myRealServer&quot;, :app, :web, :db, primary: true<br />
-set :rails_env, &quot;production&quot;<br />
-set :rvm_type, :user<br />
-set :scm, :subversion<br />
-set :scm_username, &quot;myUser&quot;<br />
-set :scm_password, &quot;xxxxx&quot;<br />
-set :repository, &quot;https://myrepository/svn/myproject/trunk&quot;</p>
-<p>#確認メッソードを呼び出す<br />
-confirm</p>
-<p>#stagging.rb<br />
-server &quot;myproject.com&quot;, :app, :web, :db, primary: true<br />
-set :rails_env, &quot;staging&quot;<br />
-set :rvm_type, :system<br />
-set :rvm_path, &quot;/usr/local/rvm&quot;<br />
-set :scm, :git<br />
-set :repository,  &quot;ssh://git@gitlab.test.com:10022/myProject.git&quot;<br />
-set :deploy_via, :remote_cache<br />
-[/ruby]</p>
-<p>ご覧のとおり、stageによってscm(バージョン管理ツール)やサーバーが違います。</p>
-<p>最後はサーバー側の修正を行います。必要なライブラリーをインストールし、unicorn用のユーザーアカウントを追加します</p>
-<p>[html]<br />
-### 必要なライブラリのインストール (rootにてコマンド実行)<br />
-$ yum install libxslt-devel</p>
-<p>### app ユーザ作成 (rootにてコマンド実行)<br />
-# adduser app<br />
-# mkdir -p /u/apps<br />
-# chown app:app /u/apps<br />
-rvm経由でRubyのインストールを行う：<br />
-### ruby2.0.0-p0 インストール (appユーザにてコマンド実行)</p>
-<p>$ rvm install 2.0.0-p0<br />
-$ rvm reload<br />
-$ rvm use 2.0.0-p0 --default<br />
-$ echo 'gem: --no-ri --no-rdoc' &gt;&gt; ~/.gemrc<br />
-$ echo ':ssl_verify_mode: 0' &gt;&gt; ~/.gemrc<br />
-$ gem install bundler<br />
-[/html]</p>
-<p>最後はapacheのVirtualHostを設定します：</p>
-<p>[html]<br />
-### apache 設定</p>
-<p>    ServerName special.myserver.jp</p>
-<p>    ProxyPass /assets/ !<br />
-    ProxyPass / http://localhost:18080/<br />
-    ProxyPassReverse / http://localhost:18080/</p>
-<p>    Alias /assets/ /u/apps/myProject/current/public/assets/</p>
-<p>        Options FollowSymLinks<br />
-        Order Allow,Deny<br />
-        Allow from All<br />
-[/html]</p>
-<p>実際にプロジェクトをデプロイしてみましょう！</p>
-<p>[html]<br />
-#capistranoの動作確認(初回のみ)<br />
-cap production deploy:check</p>
-<p># 最初の環境構築 (初回のみ)<br />
-cap production deploy:setup</p>
-<p>#デプロイ<br />
-cap production deploy</p>
-<p>#自分で作ったunicornのインストール・起動タスク<br />
-cap production deploy:start<br />
-[/html]</p>
+capistranoは指定されたstagesの設定ファイルを自動的に読み取ってくれる。この設定ファイルの保存場所は　→　config/deploy/{stage名}.rb</p>
+ということで、stagging.rbとproduction.rbを追加しましょう！</p>
+
+
+<pre>
+#production.rb
+server "myRealServer", :app, :web, :db, primary: true
+set :rails_env, "production"
+set :rvm_type, :user
+set :scm, :subversion
+set :scm_username, "myUser"
+set :scm_password, "xxxxx"
+set :repository, "https://myrepository/svn/myproject/trunk"
+
+#確認メッソードを呼び出す
+confirm
+#stagging.rb
+server "myproject.com", :app, :web, :db, primary: true
+set :rails_env, "staging"
+set :rvm_type, :system
+set :rvm_path, "/usr/local/rvm"
+set :scm, :git
+set :repository,  "ssh://git@gitlab.test.com:10022/myProject.git"
+set :deploy_via, :remote_cache
+</pre>
+
+ご覧のとおり、stageによってscm(バージョン管理ツール)やサーバーが違います。</p>
+最後はサーバー側の修正を行います。必要なライブラリーをインストールし、unicorn用のユーザーアカウントを追加します</p>
+
+<pre>
+### 必要なライブラリのインストール (rootにてコマンド実行)
+$ yum install libxslt-devel
+
+### app ユーザ作成 (rootにてコマンド実行)
+# adduser app
+# mkdir -p /u/apps
+# chown app:app /u/apps
+
+rvm経由でRubyのインストールを行う：
+### ruby2.0.0-p0 インストール (appユーザにてコマンド実行)
+$ rvm install 2.0.0-p0
+$ rvm reload
+$ rvm use 2.0.0-p0 --default
+$ echo 'gem: --no-ri --no-rdoc' >> ~/.gemrc
+$ echo ':ssl_verify_mode: 0' >> ~/.gemrc
+$ gem install bundler
+</pre>
+
+最後はapacheのVirtualHostを設定します：</p>
+
+<pre>
+### apache 設定
+    ServerName special.myserver.jp
+    ProxyPass /assets/ !
+    ProxyPass / http://localhost:18080/
+    ProxyPassReverse / http://localhost:18080/
+    Alias /assets/ /u/apps/myProject/current/public/assets/
+        Options FollowSymLinks
+        Order Allow,Deny
+        Allow from All
+</pre>
+
+実際にプロジェクトをデプロイしてみましょう！</p>
+
+<pre>
+
+#capistranoの動作確認(初回のみ)
+cap production deploy:check
+
+# 最初の環境構築 (初回のみ)
+cap production deploy:setup
+
+#デプロイ
+cap production deploy
+
+#自分で作ったunicornのインストール・起動タスク
+cap production deploy:start
+</pre>
+
 <p>http://special.server.comをアクセスすると、問題なくアプリが起動する・・はずです。</p>
